# project-buchannon

./: README.md  config.yaml  pyproject.toml
development/: AGENT_toolset_specs.md
src/ai_lifeguard/: __init__.py  _scanner.py  command_validator.py  config.py  connection_validator.py  file_access_monitor.py  help.py  mcp_guardian.py  models.py  prompt_checker.py
src/ai_lifeguard/defaults/: blocked_commands.json  injection_patterns.json  sensitive_paths.json
tests/: test_command_validator.py  test_connection_validator.py  test_file_access_monitor.py  test_mcp_guardian.py  test_prompt_checker.py
toolkit/: command_validator.py  connection_sniffer.py  file_access_monitor.py  mcp_guardian.py  messaging_reporting.py  prompt_checker.py
